# template-lambda-by-terraform

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  renovate.json  terraform.tf  terraform.tfvars
.github/workflows/: deploy.yml  lint.yml  release-prd.yml  terraform.yml  test_unit.yml
src/handlers/error_processor/: error_processor.py
src/utils/aws/: __init__.py  aws.py
src/utils/logger/: create_logger.py  logger.py  logging_function.py  logging_handler.py
terraform/envs/prd/: .envrc.example  Makefile  terraform.tf
terraform/modules/common/: cloudwatch.tf  events.tf  iam.tf  lambda.tf  outputs.tf  s3.tf  sns.tf  ssm.tf  variables.tf
terraform/modules/events_slack_webhook_destination/: events.tf  variables.tf
terraform/modules/keep_only_latest_lambda_version/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda_function/: lambda.tf  outputs.tf  variables.tf
terraform/modules/lambda_function_basic/: lambda.tf  outputs.tf  variables.tf
terraform_modules/common/: events.tf  iam.tf  lambda.tf  variables.tf
terraform_modules/events_slack_webhook_destination/: variables.tf
terraform_modules/lambda_function/: lambda.tf  variables.tf
terraform_modules/lambda_function_basic/: lambda.tf  logs.tf  outputs.tf  variables.tf
tests/unit/: conftest.py
tests/unit/handlers/: test_error_processor.py
tests/unit/utils/logger/: conftest.py  test_create_logger.py  test_integration.py  test_logging_function.py  test_logging_handler.py
